fix blocks on mobile

--- a/assets/styles/components/_blocks-layout.scss
+++ b/assets/styles/components/_blocks-layout.scss
@@ -128,6 +128,12 @@
   color: white;
 }
 
+@media (max-width: $breakpoint-md){
+  .blocks-layout__block--first-item {
+    display: none;
+  }
+}
+
 .blocks-layout__block--first-item-white {
   background: white;
 }
