--- a/assets/styles/components/_header.scss
+++ b/assets/styles/components/_header.scss
@@ -7,7 +7,7 @@
   font-size: 1rem;
   font-family: $baseFont;
   margin: 0 2rem;
-  padding: 0.1rem;
+  padding: 0.5rem 0;
   border-bottom: 0.25rem solid $themeColor;
   text-align: center;
 }
